Fix clubs being SQUASHED on iOS

--- a/src/components/Club.module.css
+++ b/src/components/Club.module.css
@@ -5,8 +5,8 @@
   justify-content: center;
   padding: 20px;
   border: none;
-  margin: 15px;
-  margin-top: 0;
+  margin: 15px 0;
+  width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
   background-color: #ffa789;
