--- a/src/components/ClubList.module.css
+++ b/src/components/ClubList.module.css
@@ -5,10 +5,8 @@
 }
 
 .list {
-  display: flex;
-  flex-direction: column;
   flex: 1 0 0;
-  padding-top: 15px;
+  padding: 0 15px;
   /* overflow: auto; */
   /* Momentum scrolling on iOS */
   -webkit-overflow-scrolling: touch;
